# picovic

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  cpu_6502.h  cpu_6502M0.S  handler.c  handler.h  macros.s  main.c  rom.s  vic.c  vic.h
hardware/: fp-info-cache  picovic-cache.lib  picovic-rescue.lib  picovic.kibot.yaml  picovic.kicad_pcb  picovic.kicad_pcb-bak  picovic.kicad_prl  picovic.kicad_pro  picovic.kicad_sch  picovic.pro  picovic.sch  picovic.sch-bak  sym-lib-table
ps2/: ps2.h
scanvideo/: scanvideo.h
software/: .gitignore  CMakeLists.txt  basic.h  char_rom.h  cpu_6502.c  kernal.h  main.c  vic.c  vic.h
software/FatFs_SPI/ff14a/source/: ffconf.h
software/FatFs_SPI/sd_driver/: hw_config.c  spi.c
software/diskimage/: diskimage.c  diskimage.h
software/ps2/: ps2.h  ps2.pio
software/scanvideo/: CMakeLists.txt  scanvideo.c  scanvideo_base.h  vga_modes.c
software/scanvideo/include/: scanvideo_base.h
